--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,8 @@
       </ul>
     </section>
 
+    {{MODEL_LINKS_BLOCK}}
+
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js" defer></script>
     <script src="/app.js" defer></script>
